examples/second_pass_err_test.as
.entry K
.entry K
K: stop
.entry H
prn #1000000
.extern W
.extern M
.entry M
prn M
prn X

